# 2048-LLM

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
agents/: a_star_agent.py  agent.py  alpha_beta_expectimax_agent.py  deepseekv3_agent.py  expectimax_agent.py  gemini_agent.py  gemma3_agent.py  gpt4o_mini_agent.py  greedy_bfs_agent.py  ida_star_agent.py  llm_base_agent.py  loop_agent.py  mcts_agent.py  random_agent.py  registry.py  td_learning_agent.py
app/templates/: index.html
simulation/: game.py  game_utils.py  simulation_worker.py  training_td_worker.py
tests/: README.md  test_all_llms.py  test_deepseekv3.py  test_gemini.py  test_gemma3.py  test_gpt4o_mini.py
wandb/: latest-run  settings
wandb/run-20250503_010638-7z4wsx2r/: run-7z4wsx2r.wandb
wandb/run-20250503_011425-98xri76q/: run-98xri76q.wandb
wandb/run-20250503_011629-n1s8u7qq/: run-n1s8u7qq.wandb
wandb/run-20250503_113051-4h0jnfk2/: run-4h0jnfk2.wandb
wandb/run-20250503_113613-nu0y7mtk/: run-nu0y7mtk.wandb
wandb/run-20250503_145213-cg3ehezt/: run-cg3ehezt.wandb
wandb/run-20250504_123043-m2v8qxr0/: run-m2v8qxr0.wandb
wandb/run-20250504_123105-1gsta3gh/: run-1gsta3gh.wandb
wandb/run-20250504_123114-ocio7uig/: run-ocio7uig.wandb
wandb/run-20250504_210810-okoydhf7/: run-okoydhf7.wandb
wandb/run-20250504_210822-9ytjkxwy/: run-9ytjkxwy.wandb
wandb/run-20250504_210831-mfd1ztmr/: run-mfd1ztmr.wandb
wandb/run-20250504_211047-gys1ne43/: run-gys1ne43.wandb
wandb/run-20250504_211317-rqex3vj6/: run-rqex3vj6.wandb
wandb/run-20250504_235311-uh0n2gdq/: run-uh0n2gdq.wandb
(+382 files in other folders)
